fixed comment margin on mobile

--- a/less/responsive.less
+++ b/less/responsive.less
@@ -145,9 +145,6 @@
 				}
 			}
 
-			.comment-respond{
-				margin: 1.5em;
-			}
 		}
 
 		#secondary{
